# presentia

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  microsoft_store_additional_testing_info.txt  nginx.conf  package-lock.json  package.json  start.js
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-release.yml
augur/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.snippet.yml  pyproject.toml
augur/augur/: __init__.py  anomaly.py  config.py  dataset.py  deps.py  main.py  schemas.py
augur/augur/engine/: __init__.py  base.py  fake.py  registry.py  tabfm_engine.py
augur/tests/: conftest.py  test_anomaly.py  test_api.py  test_dataset.py
docs/: ARQUITECTURA.md  COLLAB_CRDT_PLAN.md  DEPLOY_EASYPANEL.md
docs/exploration/tabfm/: DISENO-MVP.md  RESULTS.md  SPIKE.md  bench.py  fetch_weights.sh  verify_engine.py
docs/i18n/: README.es.md
electron/: .gitignore  build.js  ensure_spacy_model.js  generate_update.js  mas_development_readme.md  mas_distribution_readme.md  package-lock.json  package.json  sync_export_runtime.js  version.json
electron/app/: main.ts
electron/scripts/: prepare-export-chromium.cjs
presentation-export/: export-version.json
research/render-poc/: .gitignore  README.md
scripts/: sync-presentation-export.cjs
servers/fastapi/: migrations.py  pyproject.toml  server.py  server.spec
servers/nextjs/: middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
(+550 files in other folders)
