[project]
name = "augur"
version = "0.1.0"
description = "Motor self-hosted de predicción tabular zero-shot (Escriba Suite)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# TabFM no está en PyPI. Instalar el motor real con:
#   pip install "tabfm[pytorch] @ git+https://github.com/google-research/tabfm.git"
# (los pesos se bajan de HuggingFace en la primera predicción).
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["augur*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
